resources/CSS/style.css
*{
    margin: 0;
    padding: 0;
    text-decoration: none;
    color: var(--text-color);
    
    box-sizing: border-box;
}

*::-webkit-scrollbar {
    display: none;
}

html{
    scroll-behavior: smooth;
}

body{
    --text-color: rgb(230,230,230);
    --bkg-color: #151515;
    --dark-shadow: 0 0.2rem 2rem rgba(0, 0, 0, 0.5);
    --dim-picture: brightness(0.8);
    --input-field: rgba(170,170,170);
}

.light-theme{
    --text-color: rgb(50,50,50);
    --bkg-color: rgb(240,240,240);
    --dark-shadow: 0 0.2rem 2rem rgba(70, 70, 70, 0.3);
    --dim-picture: brightness(1);
    --input-field: rgba(170,170,170);
}

p{
    margin: 1rem 0;
}

h1{
    font-weight: 400;
    margin: 1rem 0;
}

h2{
    margin: 1rem 0;
    font-weight: 400;
}

h3{
    margin: 1rem 0;
    font-weight: 500;
}

.centered{
    text-align: center;
}

.fullwidth{
    width: 100vw;
    margin: 2rem 0;
}

ul{
    list-style: none;
}

li{
    margin: 1rem 0;
}

i{
    color: white;
}

.scroll-disabled{
    overflow: hidden;
}

.hide{
    opacity: 0;
}

.disable{
    display: none !important;
}

#theme i{
  color: var(--text-color);
  font-size: 1.5rem; 
  transition: all 0.5s ease; 
}

@keyframes fadeout {
    0% {opacity: 1;}
    50% {opacity: 1;}
    100% { opacity: 0;}
}

body{
    box-sizing: border-box;
    -ms-overflow-style: none;  /* IE and Edge */
    scrollbar-width: none;
    font-family: 'Montserrat', sans-serif;
    overflow-x: hidden;
    width: 100vw;
}

header{
    height: 15vh;
    width: 100vw;
    display: flex;
    justify-content: space-between;
    align-items: center;
    background: linear-gradient(to bottom, rgba(0,0,0,0.7), rgba(0,0,0,0));
    position: absolute;
    top: 0;
    z-index: 3;
    transition: all 0.3s ease;
}

.social i{
    font-size: 1.5rem;
    color:rgba(255, 255, 255, 0.8);
    margin: 0 1rem;
}

.social i:hover{
    color: white;
}

#social-desktop-header{
    display: block;
    margin: 0 2rem;
}

#social-mobile-header{
    display: none;
}

.logo{
    text-align: center;
    position: absolute;
    top: 1rem;
    left: 50%;
    transform: translateX(-50%);
    z-index: 2;
}

.logo h3{
    font-family: 'Caveat', cursive;
    font-size: 2rem;
    color: white;
    margin: 0;
}

.logo p{
    color: white;
    font-size: 0.8rem;
    margin: 0;
}

.navbar{
    list-style: none;
    display: flex;
    margin: 0 2rem;
}

.navbar li{
    margin: 0 1rem;
}

.navbar li::after {
    content: '';
    display: block;
    margin: auto;
    height: 1px;
    width: 0px;
    background: rgb(255, 255, 255);
    transition: all 0.1s linear;
}

.navbar li:hover::after {
width: 100%;
}

.navbar a{
    color: white;
}

.navlink div{
    color: white;
}

.burger{
    display: none;
    position: absolute;
    z-index: 5;
    top: 2rem;
    right: 1rem;
    flex-direction: column;
    justify-content: space-between;
    height: 1.2rem;
    cursor: pointer;
}

.burger div{
    width: 30px;
    height: 3px;
    background-color: rgb(255, 255, 255); /* COLORS */
    transition: all 0.3s ease;
    border-radius: 3px;
}

.toggle .line1{    
    transform: rotate(-45deg) translate(-3px,9px);
}

.toggle .line2{    
    opacity: 0;
}

.toggle .line3{    
    transform: rotate(45deg) translate(-3px,-9px);
}

/* MAIN PART */

.section{
    min-height: 100vh;
    padding: 3rem 0;
    background: var(--bkg-color);
    position: relative;
    z-index: 3;
    display: flex;
    align-items: center;
    justify-content: center;
}

.one{
    background: url("../images/curanakrevetu.jpg") bottom/cover;
    transition: background 1s ease, filter 0.5s ease; 
    min-height: 90vh;
    height: 100vh;
    width: 100vw;
    position: relative;
    z-index: 2;
    filter: var(--dim-picture);
}

.ioscarousell{
    display: none;
}

    /* slogan */
.whiteout{
    width: 100vw;
    height: 100vh;
    position:absolute;
    top: 0;
    z-index: 5;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    /* preload images for carousell */
    background: linear-gradient(to bottom, var(--bkg-color),var(--bkg-color)), url("../images/curanakrevetu.jpg"), url("../images/dorucak.jpg"), url("../images/wellness2.jpg"), url("../images/terasa.jpg"), url("../images/zalazak2.jpg") bottom/cover;
    transition: all 2s ease-in-out;
}

.whiteout h1{
    font-size: 3rem;
    font-family: 'Caveat', cursive;
    color: #101010;
}

.whiteout img{
    min-width: 2rem;
    max-width: 5rem;
    opacity: 0.2;
}

.slogan{
    width: 100%;
    text-align: center;
    position: absolute;
    z-index: 5;
    top: 90vh;
    font-size: 1.7rem;
    font-weight: 300;
    transition: all 1s ease;
    /* background: linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,0.3)); */
    height: 10vh;
    text-align: center;
    color: white;
    text-shadow: 0 0 0.5rem rgb(0, 0, 0), 0 0 1rem rgb(0, 0, 0);
}

.move-back{
    z-index: 3;
}

.first{
    transition: all 2s ease;
    color: white;
}

.second{
    transition: all 2s ease;
    color: white;
}
    /* slogan */

/* MAIN PART */
/* SECTION TWO about and contact form */
.about{
    display: flex;
    flex-wrap: wrap-reverse;
    justify-content: center;
    align-items: center;
    gap: 2rem;
}

.about img{
    max-width: 35rem;
    min-width: 20rem;
    border-radius: 0.4rem;
    box-shadow: 0 0.2rem 1rem rgba(0, 0, 0, 0.5);
    margin: 0 1rem;
    filter: var(--dim-picture);
}

.text{
    min-width: 20rem;
    max-width: 45rem;
    text-align: center;
    margin: 0 1rem;
}

/* SECTION TWO about and contact form */
/* SECTION THREE types of photos */
.three{
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    flex-direction: column;
}

.outer-container{
    display: flex;
    justify-content: center;
    gap: 2rem;
    flex-wrap: wrap;
}

.photo-type{
    width: 25rem;
    margin: 2rem 0;
}
/* ... */

